--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-pdo":  "*",
         "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
         "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
-        "crate/crate-dbal": "~1.1.0"
+        "crate/crate-dbal": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
