--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "julianmar/laravel-crate.io",
+    "name": "julianmar/laravel-crate",
     "description": "Crate.io driver for Laravel 5",
     "license": "MIT",
     "keywords" : ["laravel5","laravel","crate.io","crate","pdo_crate"],
